feat: comprehensive enhancement of Liquidity Service technical architecture
- Complete database schema design with financial precision and partitioning
- Advanced transaction management with SAGA pattern and optimistic locking
- Multi-tier cache architecture (L1 Local + L2 Redis + L3 Spanner)
- Financial chaos engineering with production-safe monetary controls
- Comprehensive balance management UI with approval workflows
- Maintenance and downtime scheduling with participant notifications
- Net debit cap management with real-time monitoring
- High-performance JVM and Spring Boot optimizations for financial precision
- Regulatory compliance integration with MAS reporting
- Complete traceability and audit trail systems

The liquidity service now provides implementation-ready specifications
for real-time balance management with ACID guarantees and sub-200ms response times.