@@ -1,602 +1,1597 @@
-# Fast Liquidity Service - Technical Architecture & Exception Handling
+# Fast Liquidity Service - Deep Technical Architecture & Implementation
 
-## Service Responsibilities & Integration Architecture
+## Core Service Responsibilities & Real-time Balance Management
 
 ```mermaid
 graph TB
-    subgraph "External Consumers"
-        WebMethods[WebMethods Integration<br/>Outward Payment Processing<br/>REST API Calls]
-        InwardProcessor[Fast Inward Processor<br/>Kafka Events]
-        OutwardProcessor[Fast Outward Processor<br/>REST API Calls]
-        LiquidityDashboard[Liquidity Operations Dashboard<br/>Web UI]
+    subgraph "External Consumer Ecosystem"
+        WebMethodsSOAP[WebMethods Integration<br/>SOAP/REST API Gateway<br/>Outward Payment Processing<br/>Throughput: 500 TPS]
+        InwardProcessor[Fast Inward Processor<br/>Balance Authorization Requests<br/>gRPC High-performance Calls<br/>SLA: <100ms Response]
+        OutwardProcessor[Fast Outward Processor<br/>Payment Authorization<br/>REST API Calls<br/>SLA: <200ms Response]
+        LiquidityOpsUI[Liquidity Operations Dashboard<br/>Balance Management UI<br/>Real-time Monitoring<br/>Manual Override Capabilities]
+        TreasurySystem[Treasury Management System<br/>Balance Reporting Integration<br/>Regulatory Compliance<br/>Daily Reconciliation]
     end
     
-    subgraph "Fast Liquidity Service - Core Responsibilities"
-        RestAPI[REST API Gateway<br/>OpenAPI 3.0 Contract<br/>Spring WebFlux]
-        BalanceEngine[Balance Engine<br/>ACID Transaction Manager]
-        AuthorizationManager[Authorization Manager<br/>Net Debit Cap Enforcement]
-        RiskMonitor[Real-time Risk Monitor<br/>Threshold Management]
-        ReportingEngine[Regulatory Reporting Engine<br/>MAS Compliance]
-        CacheManager[High-Performance Cache<br/>Redis + Local Cache]
-        EventPublisher[Event Publisher<br/>Kafka Producer]
+    subgraph "Fast Liquidity Service - Core Architecture"
+        APIGateway[REST API Gateway<br/>OpenAPI 3.0 Contract<br/>Spring WebFlux Reactive<br/>Virtual Thread Pool: 300]
+        BalanceEngine[Real-time Balance Engine<br/>ACID Transaction Manager<br/>Optimistic Locking<br/>Concurrent Processing: 1000 TPS]
+        AuthorizationManager[Authorization Manager<br/>Net Debit Cap Enforcement<br/>Risk-based Limits<br/>Multi-tier Approval]
+        RiskMonitor[Real-time Risk Monitor<br/>Threshold Management<br/>Predictive Analytics<br/>ML-based Alerting]
+        ReportingEngine[Regulatory Reporting Engine<br/>MAS Compliance<br/>Real-time CTR/STR<br/>Automated Filing]
+        CacheManager[High-Performance Cache Manager<br/>L1: Local Cache + L2: Redis<br/>Cache-aside Pattern<br/>Consistency Guarantees]
+        EventPublisher[Event Publisher<br/>Kafka Producer<br/>Balance Change Events<br/>Audit Trail]
     end
     
-    subgraph "Fallback & Exception Handling"
-        CircuitBreaker[Circuit Breaker<br/>Spanner + Redis Monitor]
-        TransactionRetry[Transaction Retry Logic<br/>Optimistic Locking]
-        FallbackProcessor[Fallback Processor<br/>Read-Only Mode]
-        EmergencyOverride[Emergency Override<br/>Manual Operations]
-        AlertingService[Real-time Alerting<br/>PagerDuty + Slack]
+    subgraph "Advanced Resilience & Transaction Management"
+        L1BalanceCB[L1: Balance Operation Circuit Breaker<br/>Transaction Conflict Monitor<br/>Threshold: 30% conflict/20 attempts]
+        L2CacheCB[L2: Cache Circuit Breaker<br/>Redis Cluster Health Monitor<br/>Threshold: 20% failure/30 calls]
+        L3DatabaseCB[L3: Database Circuit Breaker<br/>Spanner Performance Monitor<br/>Threshold: 15% timeout/50 calls]
+        TransactionCoordinator[Transaction Coordinator<br/>SAGA Pattern Implementation<br/>Compensation Logic<br/>Two-Phase Commit]
+        OptimisticLockManager[Optimistic Lock Manager<br/>Version-based Concurrency<br/>Conflict Resolution<br/>Retry Strategy]
+        ChaosBalanceEngine[Chaos Balance Engine<br/>High-contention Simulation<br/>Lock Timeout Testing<br/>Consistency Validation]
     end
     
-    subgraph "Data Layer"
-        Redis[(Redis Cluster<br/>Balance Cache<br/>< 1ms reads)]
-        Spanner[(Cloud Spanner<br/>ACID Balances<br/>Audit Trail)]
-        BigQuery[(BigQuery<br/>Analytics<br/>Regulatory Reports)]
-        S3Compliance[(S3 Bucket<br/>Compliance Documents<br/>7-year retention)]
+    subgraph "Multi-tier Data Architecture"
+        LocalCache[(L1 Local Cache<br/>Caffeine Cache<br/>Size: 100K entries<br/>TTL: 30 seconds<br/>Hit Ratio: >95%)]
+        RedisCluster[(L2 Redis Cluster<br/>6 Nodes: 3M + 3R<br/>Balance Hot Data<br/>RAM: 64GB per node<br/>Sub-ms Response)]
+        SpannerDB[(Cloud Spanner<br/>Multi-region: Global<br/>Balance Authoritative Store<br/>Processing Units: 20<br/>ACID Guarantees)]
+        BigQueryDW[(BigQuery Data Warehouse<br/>Balance Analytics<br/>Regulatory Reporting<br/>ML Feature Store<br/>Real-time Streaming)]
+        S3Compliance[(S3 Compliance Storage<br/>Audit Documents<br/>7-year Retention<br/>Encryption at Rest<br/>Lifecycle Management)]
     end
     
-    subgraph "External Integration"
-        MASReporting[MAS Regulatory System<br/>Daily Balance Reports]
-        RiskManagement[Risk Management System<br/>Limit Monitoring]
-        CoreBanking[Core Banking Systems<br/>Balance Reconciliation]
+    subgraph "External Integration & Compliance"
+        MASRegulatory[MAS Regulatory System<br/>Daily Balance Reports<br/>Automated CTR Filing<br/>Real-time Monitoring]
+        RiskManagementPlatform[Enterprise Risk Platform<br/>Limit Management<br/>Concentration Risk<br/>Portfolio Analytics]
+        CoreBankingSystems[Core Banking Systems<br/>Balance Reconciliation<br/>End-of-day Processing<br/>Nostro Management]
+        TreasuryWorkstation[Treasury Workstation<br/>Manual Adjustments<br/>Emergency Overrides<br/>Approval Workflows]
     end
     
-    WebMethods --> RestAPI
-    InwardProcessor --> RestAPI
-    OutwardProcessor --> RestAPI
-    LiquidityDashboard --> RestAPI
+    WebMethodsSOAP --> APIGateway
+    InwardProcessor -.->|gRPC| BalanceEngine
+    OutwardProcessor --> APIGateway
+    LiquidityOpsUI --> APIGateway
+    TreasurySystem --> APIGateway
     
-    RestAPI --> BalanceEngine
-    RestAPI --> AuthorizationManager
-    BalanceEngine --> RiskMonitor
-    AuthorizationManager --> ReportingEngine
+    APIGateway --> BalanceEngine
+    BalanceEngine --> AuthorizationManager
+    AuthorizationManager --> RiskMonitor
+    RiskMonitor --> ReportingEngine
     ReportingEngine --> EventPublisher
     
     BalanceEngine <--> CacheManager
-    CacheManager <--> Redis
-    BalanceEngine <--> Spanner
+    CacheManager <--> LocalCache
+    CacheManager <--> RedisCluster
+    BalanceEngine <--> SpannerDB
     
-    %% Exception Flows
-    BalanceEngine -.->|High Contention| CircuitBreaker
-    CacheManager -.->|Redis Down| CircuitBreaker
-    BalanceEngine -.->|Spanner Timeout| CircuitBreaker
+    %% Transaction Management Integration
+    BalanceEngine --> TransactionCoordinator
+    TransactionCoordinator --> OptimisticLockManager
+    OptimisticLockManager -.->|Lock Conflicts| L1BalanceCB
     
-    CircuitBreaker --> TransactionRetry
-    TransactionRetry -.->|Retry Success| BalanceEngine
-    TransactionRetry -.->|Max Retries| FallbackProcessor
-    FallbackProcessor --> EmergencyOverride
+    %% Resilience Integration
+    CacheManager -.->|Cache Failures| L2CacheCB
+    BalanceEngine -.->|DB Timeouts| L3DatabaseCB
     
-    CircuitBreaker --> AlertingService
-    FallbackProcessor --> AlertingService
-    EmergencyOverride --> AlertingService
+    L1BalanceCB --> TransactionCoordinator
+    L2CacheCB --> CacheManager
+    L3DatabaseCB --> BalanceEngine
     
-    %% External Reporting
-    ReportingEngine --> BigQuery
+    ChaosBalanceEngine -.->|Chaos Testing| L1BalanceCB
+    ChaosBalanceEngine -.->|Load Testing| L2CacheCB
+    ChaosBalanceEngine -.->|Stress Testing| L3DatabaseCB
+    
+    %% External Integration
+    ReportingEngine --> BigQueryDW
     ReportingEngine --> S3Compliance
-    ReportingEngine --> MASReporting
-    RiskMonitor --> RiskManagement
-    BalanceEngine --> CoreBanking
+    ReportingEngine --> MASRegulatory
+    RiskMonitor --> RiskManagementPlatform
+    BalanceEngine --> CoreBankingSystems
+    AuthorizationManager --> TreasuryWorkstation
 ```
 
-## Exception Handling & Liquidity Continuity
+## Advanced Database Schema & Balance Management
 
-```mermaid
-flowchart TD
-    Start([Balance Check/Update Request]) --> ValidateRequest{Request<br/>Validation}
-    
-    ValidateRequest -->|Valid| CheckCache{Redis Cache<br/>Available?}
-    ValidateRequest -->|Invalid| BadRequest[400 Bad Request<br/>+ Validation Errors]
-    
-    CheckCache -->|Cache Hit| ServeFromCache[Serve from Cache<br/>+ Background Refresh]
-    CheckCache -->|Cache Miss| CheckSpanner{Spanner<br/>Available?}
-    CheckCache -->|Redis Down| CheckSpanner
-    
-    CheckSpanner -->|Available| ReadBalance[Read Balance<br/>from Spanner]
-    CheckSpanner -->|Down| FallbackMode{Fallback Mode<br/>Available?}
-    
-    ReadBalance --> ProcessTransaction{Transaction<br/>Type}
-    ProcessTransaction -->|Balance Check| ReturnBalance[Return Current<br/>Balance + Cache]
-    ProcessTransaction -->|Balance Update| AcquireLock{Acquire<br/>Optimistic Lock}
-    
-    AcquireLock -->|Lock Success| UpdateBalance[Update Balance<br/>ACID Transaction]
-    AcquireLock -->|Lock Contention| RetryLock{Retry Count<br/>< 5?}
-    RetryLock -->|Yes| BackoffDelay[Exponential Backoff<br/>10ms → 100ms]
-    BackoffDelay --> AcquireLock
-    RetryLock -->|No| ContentionError[409 Conflict<br/>High Contention]
-    
-    UpdateBalance --> ValidateConstraints{Net Debit Cap<br/>Validation}
-    ValidateConstraints -->|Within Limits| CommitTransaction[Commit Transaction<br/>+ Update Cache]
-    ValidateConstraints -->|Limit Exceeded| RollbackTxn[Rollback Transaction<br/>+ 422 Limit Exceeded]
-    
-    CommitTransaction --> PublishEvent[Publish Balance<br/>Change Event]
-    PublishEvent --> AuditLog[Write Audit Log<br/>Compliance Trail]
-    AuditLog --> Success([Balance Updated<br/>Successfully])
-    
-    FallbackMode -->|Read-Only Available| ReadOnlyBalance[Read-Only Balance<br/>from Last Known State]
-    FallbackMode -->|Total Failure| EmergencyMode[Emergency Mode<br/>Manual Override Required]
-    
-    ReadOnlyBalance --> StaleDataWarning[Return Balance +<br/>Stale Data Warning]
-    EmergencyMode --> CriticalAlert[Critical Alert<br/>+ Manual Intervention]
-    
-    ServeFromCache --> Success
-    ReturnBalance --> Success
-    StaleDataWarning --> PartialSuccess([Degraded Service<br/>Available])
-    
-    style BadRequest fill:#ffcccc
-    style ContentionError fill:#ffcc99
-    style RollbackTxn fill:#ffffcc
-    style EmergencyMode fill:#ff6666
-    style CriticalAlert fill:#ff3333
+### Cloud Spanner Tables for Balance Management
+
+```sql
+-- Participant Balance Master Table with Partitioning
+CREATE TABLE participant_balance_master (
+  participant_id STRING(11) NOT NULL, -- BIC code
+  currency STRING(3) NOT NULL,
+  balance_type STRING(20) NOT NULL, -- AVAILABLE, RESERVED, TOTAL, MINIMUM_REQUIRED
+  
+  -- Current Balance Information
+  current_balance NUMERIC NOT NULL,
+  reserved_amount NUMERIC NOT NULL DEFAULT 0,
+  available_balance NUMERIC AS (current_balance - reserved_amount) STORED,
+  
+  -- Net Debit Cap Management
+  net_debit_cap_limit NUMERIC NOT NULL,
+  net_debit_cap_used NUMERIC NOT NULL DEFAULT 0,
+  net_debit_cap_available NUMERIC AS (net_debit_cap_limit - net_debit_cap_used) STORED,
+  net_debit_cap_utilization_percentage NUMERIC AS (
+    CASE 
+      WHEN net_debit_cap_limit > 0 THEN (net_debit_cap_used / net_debit_cap_limit) * 100
+      ELSE 0 
+    END
+  ) STORED,
+  
+  -- Risk Management
+  minimum_balance_threshold NUMERIC NOT NULL DEFAULT 0,
+  warning_balance_threshold NUMERIC NOT NULL DEFAULT 0,
+  maximum_daily_debit NUMERIC NOT NULL DEFAULT 0,
+  current_daily_debit NUMERIC NOT NULL DEFAULT 0,
+  
+  -- Version Control for Optimistic Locking
+  version_number INT64 NOT NULL DEFAULT 1,
+  last_update_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  last_update_source STRING(50) NOT NULL, -- SERVICE_NAME or USER_ID
+  last_update_reference STRING(100), -- Transaction ID or manual reference
+  
+  -- Audit and Compliance
+  account_status STRING(20) NOT NULL DEFAULT 'ACTIVE', -- ACTIVE, SUSPENDED, FROZEN, CLOSED
+  compliance_status STRING(20) NOT NULL DEFAULT 'COMPLIANT', -- COMPLIANT, UNDER_REVIEW, RESTRICTED
+  kyc_status STRING(20) NOT NULL DEFAULT 'VERIFIED', -- VERIFIED, PENDING, EXPIRED
+  aml_risk_rating STRING(10) NOT NULL DEFAULT 'LOW', -- LOW, MEDIUM, HIGH, CRITICAL
+  
+  -- Business Context
+  business_date DATE NOT NULL,
+  business_line STRING(30) DEFAULT 'STANDARD', -- STANDARD, PREMIUM, CORPORATE, TRADE_FINANCE
+  customer_segment STRING(20) DEFAULT 'RETAIL', -- RETAIL, CORPORATE, INSTITUTIONAL
+  
+  -- Technical Metadata
+  created_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  created_by STRING(100) NOT NULL,
+  partition_key STRING(15) NOT NULL, -- participant_id for even distribution
+  
+) PRIMARY KEY (participant_id, currency, balance_type);
+
+-- Balance Transaction History with Detailed Audit Trail
+CREATE TABLE balance_transaction_history (
+  transaction_id STRING(36) NOT NULL,
+  participant_id STRING(11) NOT NULL,
+  currency STRING(3) NOT NULL,
+  
+  -- Transaction Details
+  transaction_type STRING(30) NOT NULL, -- CREDIT, DEBIT, TRANSFER, ADJUSTMENT, REVERSAL
+  transaction_category STRING(40) NOT NULL, -- PAYMENT, SETTLEMENT, FEE, INTEREST, MANUAL_ADJUSTMENT
+  amount NUMERIC NOT NULL,
+  running_balance NUMERIC NOT NULL,
+  previous_balance NUMERIC NOT NULL,
+  
+  -- Authorization Context
+  authorization_reference STRING(100),
+  authorization_method STRING(30), -- AUTOMATIC, MANUAL, OVERRIDE
+  authorized_by STRING(100),
+  authorization_timestamp TIMESTAMP,
+  
+  -- Source Transaction Context
+  source_payment_id STRING(35),
+  source_correlation_id STRING(50),
+  source_service STRING(50) NOT NULL,
+  source_reference STRING(100),
+  
+  -- Business Context
+  business_purpose STRING(50), -- PAYMENT_PROCESSING, LIQUIDITY_MANAGEMENT, REGULATORY_ADJUSTMENT
+  counterparty_bic STRING(11),
+  counterparty_name STRING(140),
+  
+  -- Risk and Compliance Context
+  risk_assessment_score FLOAT64,
+  compliance_check_status STRING(20), -- PASSED, FAILED, PENDING, WAIVED
+  regulatory_reporting_required BOOL DEFAULT false,
+  
+  -- Timing Information
+  value_date DATE NOT NULL,
+  transaction_timestamp TIMESTAMP NOT NULL,
+  processing_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  
+  -- Version and Audit
+  version_at_transaction INT64 NOT NULL, -- Version of balance at time of transaction
+  audit_trail_reference STRING(100),
+  reversal_reference STRING(36), -- Reference to reversing transaction if applicable
+  
+  -- Technical Context
+  processing_node STRING(50),
+  idempotency_key STRING(100),
+  retry_count INT64 DEFAULT 0,
+  
+  -- Partitioning
+  business_date DATE NOT NULL,
+  partition_key STRING(15) NOT NULL, -- participant_id + YYYYMM
+  
+) PRIMARY KEY (business_date, partition_key, transaction_id),
+  INTERLEAVE IN PARENT business_date_partitions ON DELETE CASCADE;
+
+-- Balance Authorization Requests for Real-time Processing
+CREATE TABLE balance_authorization_requests (
+  authorization_id STRING(36) NOT NULL,
+  participant_id STRING(11) NOT NULL,
+  currency STRING(3) NOT NULL,
+  
+  -- Request Details
+  requested_amount NUMERIC NOT NULL,
+  transaction_type STRING(30) NOT NULL,
+  priority_level INT64 NOT NULL DEFAULT 5, -- 1-9 (9 = highest)
+  
+  -- Authorization Decision
+  authorization_status STRING(20) NOT NULL, -- PENDING, APPROVED, REJECTED, EXPIRED
+  decision_timestamp TIMESTAMP,
+  decision_reason STRING(500),
+  decision_maker STRING(100), -- System or user ID
+  
+  -- Risk Assessment
+  risk_score FLOAT64,
+  risk_factors JSON, -- Array of risk factors considered
+  limit_checks JSON, -- Results of various limit checks
+  
+  -- Balance Context at Time of Request
+  balance_at_request NUMERIC NOT NULL,
+  available_balance_at_request NUMERIC NOT NULL,
+  net_debit_cap_usage_at_request NUMERIC NOT NULL,
+  
+  -- Source Context
+  source_payment_global_id STRING(35),
+  source_correlation_id STRING(50),
+  source_service STRING(50) NOT NULL,
+  requesting_system STRING(50),
+  
+  -- Timing and SLA
+  request_timestamp TIMESTAMP NOT NULL,
+  required_response_time_ms INT64 NOT NULL DEFAULT 200,
+  actual_response_time_ms INT64,
+  sla_compliance BOOL,
+  
+  -- Expiration Management
+  authorization_expiry_timestamp TIMESTAMP,
+  auto_expire_if_unused BOOL DEFAULT true,
+  
+  -- Audit and Traceability
+  business_date DATE NOT NULL,
+  created_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  
+) PRIMARY KEY (business_date, authorization_id);
+
+-- Net Debit Cap Configuration and Management
+CREATE TABLE net_debit_cap_configuration (
+  participant_id STRING(11) NOT NULL,
+  currency STRING(3) NOT NULL,
+  
+  -- Limit Configuration
+  daily_limit NUMERIC NOT NULL,
+  monthly_limit NUMERIC NOT NULL,
+  single_transaction_limit NUMERIC NOT NULL,
+  
+  -- Dynamic Adjustment Rules
+  auto_adjustment_enabled BOOL DEFAULT false,
+  adjustment_factor FLOAT64 DEFAULT 1.0, -- Multiplier for limits
+  peak_hours_multiplier FLOAT64 DEFAULT 1.0,
+  off_peak_multiplier FLOAT64 DEFAULT 0.8,
+  
+  -- Risk-based Adjustments
+  risk_based_limits BOOL DEFAULT true,
+  high_risk_multiplier FLOAT64 DEFAULT 0.5,
+  low_risk_multiplier FLOAT64 DEFAULT 1.2,
+  
+  -- Approval Workflow
+  manual_override_allowed BOOL DEFAULT true,
+  override_approval_required BOOL DEFAULT true,
+  approver_roles ARRAY<STRING(50)>,
+  emergency_override_limit NUMERIC,
+  
+  -- Monitoring and Alerting
+  warning_threshold_percentage FLOAT64 DEFAULT 80.0,
+  critical_threshold_percentage FLOAT64 DEFAULT 95.0,
+  alert_frequency_minutes INT64 DEFAULT 30,
+  
+  -- Effective Period
+  effective_from_date DATE NOT NULL,
+  effective_until_date DATE,
+  
+  -- Audit
+  created_by STRING(100) NOT NULL,
+  created_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  last_modified_by STRING(100),
+  last_modified_timestamp TIMESTAMP OPTIONS (allow_commit_timestamp=true),
+  
+) PRIMARY KEY (participant_id, currency, effective_from_date);
+
+-- Balance Reconciliation and Control
+CREATE TABLE balance_reconciliation_control (
+  reconciliation_id STRING(36) NOT NULL,
+  participant_id STRING(11) NOT NULL,
+  currency STRING(3) NOT NULL,
+  
+  -- Reconciliation Period
+  reconciliation_date DATE NOT NULL,
+  reconciliation_type STRING(20) NOT NULL, -- DAILY, MONTHLY, ADHOC, REGULATORY
+  
+  -- Balance Comparison
+  system_balance NUMERIC NOT NULL,
+  external_balance NUMERIC NOT NULL, -- From core banking or external source
+  variance_amount NUMERIC AS (system_balance - external_balance) STORED,
+  variance_percentage NUMERIC AS (
+    CASE 
+      WHEN external_balance != 0 THEN (variance_amount / external_balance) * 100
+      ELSE 0 
+    END
+  ) STORED,
+  
+  -- Reconciliation Status
+  reconciliation_status STRING(20) NOT NULL, -- MATCHED, VARIANCE_IDENTIFIED, INVESTIGATING, RESOLVED
+  variance_explanation STRING(1000),
+  resolution_action STRING(500),
+  
+  -- External Source Information
+  external_system STRING(50) NOT NULL,
+  external_reference STRING(100),
+  external_balance_timestamp TIMESTAMP,
+  
+  -- Investigation and Resolution
+  assigned_investigator STRING(100),
+  investigation_start_timestamp TIMESTAMP,
+  resolution_timestamp TIMESTAMP,
+  resolution_method STRING(50), -- ADJUSTMENT, EXTERNAL_CORRECTION, NO_ACTION_REQUIRED
+  
+  -- Approval and Sign-off
+  approved_by STRING(100),
+  approval_timestamp TIMESTAMP,
+  approval_notes STRING(500),
+  
+  -- Audit Trail
+  created_timestamp TIMESTAMP NOT NULL OPTIONS (allow_commit_timestamp=true),
+  last_updated_timestamp TIMESTAMP OPTIONS (allow_commit_timestamp=true),
+  
+) PRIMARY KEY (reconciliation_date, participant_id, currency, reconciliation_id);
 ```
 
-## REST API Contracts for WebMethods Integration
-
-### 1. Balance Check API (Most Frequent - WebMethods)
+### Redis Cache Architecture for Ultra-High Performance
 
 ```yaml
-openapi: 3.0.3
-info:
-  title: Fast Liquidity Service API
-  version: 1.0.0
-  description: Real-time liquidity management for WebMethods integration
+liquidity_cache_architecture:
+  
+  # Redis cluster configuration optimized for balance operations
+  cluster_topology:
+    configuration:
+      masters: 3
+      replicas_per_master: 1
+      total_nodes: 6
+      memory_per_node: "64GB"
+      network_bandwidth: "50Gbps"
+      cpu_cores_per_node: 32
+    
+    data_distribution:
+      sharding_algorithm: "consistent_hashing_with_virtual_nodes"
+      virtual_nodes_per_master: 256
+      hash_function: "crc16"
+      rebalancing_strategy: "gradual_migration"
+      
+    high_availability:
+      sentinel_nodes: 3
+      sentinel_quorum: 2
+      automatic_failover: true
+      failover_timeout: "15s"
+      data_safety: "async_replication_with_fsync"
+  
+  # Cache patterns optimized for balance operations
+  cache_patterns:
+    
+    # Real-time balance cache - Ultra-fast access
+    participant_balance:
+      pattern: "liquidity:balance:{participant_id}:{currency}"
+      type: "hash"
+      fields:
+        current_balance: "numeric_string_precise"
+        reserved_amount: "numeric_string_precise"
+        available_balance: "numeric_string_computed"
+        net_debit_cap_limit: "numeric_string_precise"
+        net_debit_cap_used: "numeric_string_precise"
+        version_number: "integer"
+        last_update_timestamp: "timestamp_milliseconds"
+        account_status: "string"
+        compliance_status: "string"
+      ttl: 86400  # 24 hours with refresh-ahead pattern
+      memory_policy: "noeviction"  # Critical financial data
+      persistence: "aof_always_with_rdb_backup"
+      
+      consistency_strategy:
+        cache_aside: true
+        write_through: false  # Performance optimization
+        refresh_ahead: true   # Proactive cache warming
+        cache_warming_threshold: "30_minutes_before_expiry"
+    
+    # Authorization cache - High-frequency access
+    authorization_decisions:
+      pattern: "liquidity:auth:{authorization_id}"
+      type: "hash"
+      fields:
+        participant_id: "string"
+        currency: "string"
+        requested_amount: "numeric_string_precise"
+        authorization_status: "string"
+        decision_timestamp: "timestamp_milliseconds"
+        decision_reason: "string"
+        risk_score: "float_string"
+        expires_at: "timestamp_milliseconds"
+      ttl: 3600  # 1 hour - authorization validity period
+      memory_policy: "volatile-ttl"
+      persistence: "rdb_only"
+    
+    # Transaction lock cache - Concurrency control
+    transaction_locks:
+      pattern: "liquidity:lock:{participant_id}:{currency}"
+      type: "string"
+      value: "lock_holder_id:timestamp:transaction_id"
+      ttl: 300  # 5 minutes maximum lock duration
+      memory_policy: "noeviction"  # Critical for consistency
+      persistence: "aof_always"
+      
+      lock_management:
+        lock_acquisition: "atomic_set_nx_with_expiry"
+        lock_extension: "atomic_expire_if_owner"
+        lock_release: "atomic_del_if_owner"
+        deadlock_detection: "timeout_based_with_alerting"
+    
+    # Risk assessment cache - ML model results
+    risk_assessment:
+      pattern: "liquidity:risk:{participant_id}:{assessment_hash}"
+      type: "hash"
+      fields:
+        risk_score: "float_string"
+        risk_factors: "json_compressed"
+        assessment_timestamp: "timestamp_milliseconds"
+        model_version: "string"
+        confidence_level: "float_string"
+        expiry_timestamp: "timestamp_milliseconds"
+      ttl: 1800  # 30 minutes for risk assessments
+      memory_policy: "volatile-lru"
+      persistence: "disabled"  # Ephemeral ML results
+    
+    # Configuration cache - System settings
+    system_configuration:
+      pattern: "liquidity:config:{config_category}:{version}"
+      type: "hash"
+      fields:
+        net_debit_cap_settings: "json"
+        threshold_settings: "json"
+        approval_workflow_config: "json"
+        risk_model_parameters: "json"
+        alert_configuration: "json"
+        last_updated: "timestamp_milliseconds"
+      ttl: 900  # 15 minutes with manual invalidation
+      memory_policy: "volatile-ttl"
+      persistence: "rdb_with_manual_save"
+    
+    # Audit trail cache - Recent transactions for quick lookup
+    recent_transactions:
+      pattern: "liquidity:recent:{participant_id}:{currency}"
+      type: "sorted_set"
+      score: "transaction_timestamp"
+      value: "transaction_summary_json"
+      max_entries: 1000  # Last 1000 transactions
+      ttl: 7200  # 2 hours
+      memory_policy: "volatile-lru"
+      persistence: "disabled"
+    
+    # Performance metrics cache - Real-time monitoring
+    performance_metrics:
+      pattern: "liquidity:metrics:{metric_name}:{time_bucket}"
+      type: "hyperloglog"
+      cardinality_estimation: "participant_unique_operations"
+      ttl: 300  # 5 minutes
+      memory_policy: "volatile-ttl"
+      persistence: "disabled"
 
-paths:
-  /api/v1/liquidity/balance/check:
-    post:
-      summary: Check participant liquidity balance
-      description: High-frequency API for WebMethods outward payment processing
-      operationId: checkLiquidityBalance
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BalanceCheckRequest'
-            examples:
-              webMethodsOutward:
-                summary: WebMethods Outward Payment Check
-                value:
-                  participantId: "OCBCSGSG"
-                  amount: 50000.00
-                  currency: "SGD"
-                  transactionType: "OUTWARD_CREDIT_TRANSFER"
-                  reference: "WM-OUT-20241201-001"
-                  priority: "HIGH"
-                  timeoutMs: 150
-                  webMethodsCorrelationId: "WM-CORR-20241201-001"
-              inwardProcessorCheck:
-                summary: Inward Processor Liquidity Check
-                value:
-                  participantId: "DBSSSGSG"
-                  amount: 25000.00
-                  currency: "SGD"
-                  transactionType: "INWARD_DIRECT_DEBIT"
-                  reference: "INW-DD-20241201-001"
-                  priority: "NORMAL"
-                  timeoutMs: 100
-      responses:
-        200:
-          description: Balance check successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BalanceCheckResponse'
-              examples:
-                approved:
-                  summary: Sufficient liquidity available
-                  value:
-                    approved: true
-                    participantId: "OCBCSGSG"
-                    requestedAmount: 50000.00
-                    availableBalance: 2500000.00
-                    reservedAmount: 150000.00
-                    netDebitCapUsed: 75.5
-                    netDebitCapLimit: 5000000.00
-                    approvalReference: "LIQ-APP-20241201-001"
-                    responseTimestamp: "2024-12-01T16:30:00.125Z"
-                    processingTimeMs: 125
-                rejected:
-                  summary: Insufficient liquidity
-                  value:
-                    approved: false
-                    participantId: "OCBCSGSG"
-                    requestedAmount: 50000.00
-                    availableBalance: 25000.00
-                    rejectionReason: "INSUFFICIENT_BALANCE"
-                    rejectionCode: "LIQ_001"
-                    responseTimestamp: "2024-12-01T16:30:00.098Z"
-                    processingTimeMs: 98
-        400:
-          description: Invalid request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        422:
-          description: Business validation failed
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        429:
-          description: Rate limit exceeded
-        503:
-          description: Service temporarily unavailable
-
-  /api/v1/liquidity/balance/update:
-    post:
-      summary: Update participant liquidity balance
-      description: Atomic balance update with ACID guarantees
-      operationId: updateLiquidityBalance
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BalanceUpdateRequest'
-            examples:
-              webMethodsSettlement:
-                summary: WebMethods Settlement Update
-                value:
-                  participantId: "OCBCSGSG"
-                  amount: -50000.00
-                  currency: "SGD"
-                  transactionType: "OUTWARD_SETTLEMENT"
-                  reference: "WM-SETTLE-20241201-001"
-                  authorizationReference: "LIQ-APP-20241201-001"
-                  settlementTimestamp: "2024-12-01T16:35:00.000Z"
-                  webMethodsTransactionId: "WM-TXN-20241201-001"
-      responses:
-        200:
-          description: Balance updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BalanceUpdateResponse'
-              examples:
-                success:
-                  summary: Successful balance update
-                  value:
-                    success: true
-                    participantId: "OCBCSGSG"
-                    previousBalance: 2500000.00
-                    newBalance: 2450000.00
-                    transactionAmount: -50000.00
-                    updateReference: "LIQ-UPD-20241201-001"
-                    updateTimestamp: "2024-12-01T16:35:00.234Z"
-                    processingTimeMs: 89
-        409:
-          description: Optimistic lock conflict - retry required
-        422:
-          description: Net debit cap exceeded
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-              example:
-                error: "NET_DEBIT_CAP_EXCEEDED"
-                message: "Transaction would exceed net debit cap limit"
-                participantId: "OCBCSGSG"
-                currentCapUsage: 95.5
-                capLimit: 5000000.00
-                requestedAmount: 500000.00
-
-  /api/v1/liquidity/balance/{participantId}:
-    get:
-      summary: Get current participant balance
-      description: Real-time balance inquiry
-      parameters:
-        - name: participantId
-          in: path
-          required: true
-          schema:
-            type: string
-            pattern: '^[A-Z]{8}$'
-          example: "OCBCSGSG"
-        - name: includeReserved
-          in: query
-          schema:
-            type: boolean
-            default: false
-          description: Include reserved amounts in response
-      responses:
-        200:
-          description: Current balance information
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ParticipantBalanceResponse'
-              example:
-                participantId: "OCBCSGSG"
-                availableBalance: 2450000.00
-                reservedBalance: 125000.00
-                totalBalance: 2575000.00
-                netDebitCapUsed: 73.2
-                netDebitCapLimit: 5000000.00
-                lastUpdateTimestamp: "2024-12-01T16:35:00.234Z"
-                status: "ACTIVE"
-
-components:
-  schemas:
-    BalanceCheckRequest:
-      type: object
-      required:
-        - participantId
-        - amount
-        - currency
-        - transactionType
-        - reference
-      properties:
-        participantId:
-          type: string
-          pattern: '^[A-Z]{8}$'
-          description: BIC code of the participant
-        amount:
-          type: number
-          minimum: 0.01
-          maximum: 999999999.99
-          description: Amount to check in minor currency units
-        currency:
-          type: string
-          enum: [SGD, USD, EUR, GBP, JPY]
-          description: ISO 4217 currency code
-        transactionType:
-          type: string
-          enum: 
-            - OUTWARD_CREDIT_TRANSFER
-            - INWARD_CREDIT_TRANSFER
-            - OUTWARD_DIRECT_DEBIT
-            - INWARD_DIRECT_DEBIT
-            - SETTLEMENT
-        reference:
-          type: string
-          maxLength: 35
-          description: Unique transaction reference
-        priority:
-          type: string
-          enum: [HIGH, NORMAL, LOW]
-          default: NORMAL
-        timeoutMs:
-          type: integer
-          minimum: 50
-          maximum: 500
-          default: 200
-          description: Maximum processing time in milliseconds
-        webMethodsCorrelationId:
-          type: string
-          description: WebMethods correlation ID for tracing
+# Local cache (L1) configuration using Caffeine
+local_cache_configuration:
+  caffeine_cache_settings:
+    maximum_size: 100000  # 100K entries
+    expire_after_write: "30s"
+    expire_after_access: "60s"
+    refresh_after_write: "15s"
+    
+    cache_types:
+      balance_cache:
+        name: "participant_balances"
+        key_type: "participant_id:currency"
+        value_type: "balance_summary_object"
+        maximum_size: 50000
         
-    BalanceCheckResponse:
-      type: object
-      required:
-        - approved
-        - participantId
-        - requestedAmount
-        - responseTimestamp
-        - processingTimeMs
-      properties:
-        approved:
-          type: boolean
-          description: Whether the liquidity check passed
-        participantId:
-          type: string
-        requestedAmount:
-          type: number
-        availableBalance:
-          type: number
-          description: Current available balance
-        reservedAmount:
-          type: number
-          description: Currently reserved amounts
-        netDebitCapUsed:
-          type: number
-          description: Percentage of net debit cap used
-        netDebitCapLimit:
-          type: number
-          description: Total net debit cap limit
-        approvalReference:
-          type: string
-          description: Reference for approved checks
-        rejectionReason:
-          type: string
-          enum: 
-            - INSUFFICIENT_BALANCE
-            - NET_DEBIT_CAP_EXCEEDED
-            - PARTICIPANT_SUSPENDED
-            - SYSTEM_MAINTENANCE
-        rejectionCode:
-          type: string
-          description: Machine-readable rejection code
-        responseTimestamp:
-          type: string
-          format: date-time
-        processingTimeMs:
-          type: integer
-          description: Actual processing time
+      authorization_cache:
+        name: "authorization_decisions"
+        key_type: "authorization_id"
+        value_type: "authorization_result_object"
+        maximum_size: 25000
+        
+      configuration_cache:
+        name: "system_configuration"
+        key_type: "config_key"
+        value_type: "configuration_object"
+        maximum_size: 5000
+        refresh_after_write: "60s"  # Longer refresh for config
+        
+    eviction_policy: "size_based_lru_with_refresh_ahead"
+    statistics_enabled: true
+    cache_loader: "async_redis_fallback_spanner"
 ```
 
-### 2. WebMethods Integration Patterns
+## Advanced Transaction Management & Concurrency Control
 
-**WebMethods Outward Payment Flow:**
-```xml
-<!-- WebMethods Service Call -->
-<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/">
-  <soapenv:Header>
-    <wm:CorrelationID>WM-CORR-20241201-001</wm:CorrelationID>
-    <wm:Timeout>150</wm:Timeout>
-  </soapenv:Header>
-  <soapenv:Body>
-    <liq:BalanceCheckRequest>
-      <participantId>OCBCSGSG</participantId>
-      <amount>50000.00</amount>
-      <currency>SGD</currency>
-      <transactionType>OUTWARD_CREDIT_TRANSFER</transactionType>
-      <reference>WM-OUT-20241201-001</reference>
-      <priority>HIGH</priority>
-      <webMethodsCorrelationId>WM-CORR-20241201-001</webMethodsCorrelationId>
-    </liq:BalanceCheckRequest>
-  </soapenv:Body>
-</soapenv:Envelope>
-```
-
-**REST API Response for WebMethods:**
-```json
-{
-  "approved": true,
-  "participantId": "OCBCSGSG",
-  "requestedAmount": 50000.00,
-  "availableBalance": 2500000.00,
-  "reservedAmount": 150000.00,
-  "netDebitCapUsed": 75.5,
-  "netDebitCapLimit": 5000000.00,
-  "approvalReference": "LIQ-APP-20241201-001",
-  "responseTimestamp": "2024-12-01T16:30:00.125Z",
-  "processingTimeMs": 125,
-  "webMethodsCorrelationId": "WM-CORR-20241201-001"
-}
-```
-
-### 3. Kafka Event Publishing
-
-**Balance Change Event:**
-```json
-{
-  "eventType": "BALANCE_UPDATED",
-  "eventId": "EVT-20241201-001",
-  "timestamp": "2024-12-01T16:35:00.234Z",
-  "participantId": "OCBCSGSG",
-  "balanceChange": {
-    "previousBalance": 2500000.00,
-    "newBalance": 2450000.00,
-    "changeAmount": -50000.00,
-    "transactionType": "OUTWARD_SETTLEMENT",
-    "reference": "WM-SETTLE-20241201-001"
-  },
-  "netDebitCapInfo": {
-    "previousUsagePercent": 78.2,
-    "newUsagePercent": 73.2,
-    "limitAmount": 5000000.00
-  },
-  "metadata": {
-    "sourceSystem": "FAST_LIQUIDITY_SERVICE",
-    "webMethodsCorrelationId": "WM-CORR-20241201-001",
-    "processingTimeMs": 89
-  }
-}
-```
-
-## Performance Monitoring & SLA Management
+### ACID Transaction Coordination with Saga Pattern
 
 ```mermaid
 graph TB
-    subgraph "Performance Targets"
-        BalanceCheck[Balance Check API<br/>Target: <200ms<br/>P95: <150ms<br/>P99: <250ms]
-        BalanceUpdate[Balance Update API<br/>Target: <100ms<br/>P95: <80ms<br/>P99: <200ms]
-        Throughput[Throughput<br/>Target: 500 TPS<br/>Peak: 1000 TPS<br/>WebMethods: 200 TPS]
+    subgraph "Balance Transaction Coordination"
+        SagaOrchestrator[Balance SAGA Orchestrator<br/>Transaction State Management<br/>Compensation Logic Coordination<br/>Distributed Lock Management]
+        TransactionStateMachine[Transaction State Machine<br/>INITIATED → AUTHORIZED → COMMITTED → COMPLETED<br/>Error States: COMPENSATING → COMPENSATED]
+        OptimisticLockManager[Optimistic Lock Manager<br/>Version-based Concurrency Control<br/>Conflict Detection & Resolution<br/>Retry Strategy with Exponential Backoff]
+        CompensationEngine[Compensation Engine<br/>Rollback Logic Implementation<br/>Balance Restoration<br/>Audit Trail Maintenance]
     end
     
-    subgraph "Cache Performance"
-        Redis_Performance[Redis Performance<br/>Hit Ratio: >95%<br/>Latency: <1ms<br/>Availability: 99.99%]
-        LocalCache[Local Cache<br/>L1 Cache Hit: >80%<br/>Refresh Interval: 5s<br/>Max Size: 10k entries]
+    subgraph "Phase 1: Authorization & Validation"
+        PreAuthValidation[Pre-authorization Validation<br/>Account Status Verification<br/>Basic Limit Checks<br/>Input Sanitization]
+        RiskAssessment[Risk Assessment Transaction<br/>ML Model Scoring<br/>Historical Pattern Analysis<br/>Real-time Fraud Detection]
+        LimitValidation[Limit Validation Transaction<br/>Net Debit Cap Checking<br/>Daily Limit Verification<br/>Regulatory Compliance]
+        LockAcquisition[Distributed Lock Acquisition<br/>Redis-based Locking<br/>Deadlock Prevention<br/>Timeout Management]
     end
     
-    subgraph "Database Performance"
-        Spanner_Read[Spanner Reads<br/>Latency: <50ms<br/>Strong Consistency<br/>Regional Distribution]
-        Spanner_Write[Spanner Writes<br/>Latency: <100ms<br/>ACID Transactions<br/>Optimistic Locking]
-        Connection_Pool[Connection Pool<br/>Max: 100 connections<br/>Idle: 20 connections<br/>Timeout: 30s]
+    subgraph "Phase 2: Balance Modification"
+        BalanceRead[Balance Read Transaction<br/>Current State Retrieval<br/>Version Number Capture<br/>Consistency Point Establishment]
+        BalanceCalculation[Balance Calculation<br/>New Balance Computation<br/>Available Balance Update<br/>Reserve Amount Adjustment]
+        BalanceWrite[Balance Write Transaction<br/>Atomic Spanner Update<br/>Version Increment<br/>Optimistic Concurrency Control]
+        CacheUpdate[Cache Update Transaction<br/>L1 + L2 Cache Invalidation<br/>Consistent State Propagation<br/>Cache Warming Strategy]
     end
     
-    subgraph "Circuit Breaker States"
-        Normal[NORMAL<br/>Error Rate <5%<br/>Latency <SLA]
-        Degraded[DEGRADED<br/>Error Rate 5-20%<br/>Cache-only responses]
-        Emergency[EMERGENCY<br/>Error Rate >20%<br/>Read-only mode]
+    subgraph "Phase 3: Confirmation & Audit"
+        TransactionCommit[Transaction Commit<br/>Two-phase Commit Protocol<br/>Durability Guarantee<br/>Consistency Verification]
+        AuditRecording[Audit Recording Transaction<br/>Immutable Audit Trail<br/>Regulatory Compliance<br/>Event Sourcing]
+        EventPublication[Event Publication<br/>Kafka Producer Transaction<br/>Balance Change Events<br/>Downstream Notification]
+        LockRelease[Lock Release<br/>Atomic Lock Cleanup<br/>Deadlock Resolution<br/>Performance Optimization]
     end
     
-    BalanceCheck --> Redis_Performance
-    BalanceUpdate --> Spanner_Write
-    Redis_Performance --> LocalCache
-    Spanner_Write --> Connection_Pool
+    subgraph "Compensation Actions"
+        BalanceRollback[Balance Rollback<br/>Previous State Restoration<br/>Version Reconciliation<br/>Consistency Recovery]
+        CacheInvalidation[Cache Invalidation<br/>Distributed Cache Cleanup<br/>Stale Data Removal<br/>Fresh Data Loading]
+        AuditCompensation[Audit Compensation<br/>Compensating Transaction Record<br/>Error Context Preservation<br/>Investigation Support]
+        LockCleanup[Emergency Lock Cleanup<br/>Deadlock Resolution<br/>Resource Liberation<br/>System Recovery]
+    end
     
-    Normal -->|High Error Rate| Degraded
-    Degraded -->|Critical Errors| Emergency
-    Emergency -->|Recovery| Normal
+    SagaOrchestrator --> TransactionStateMachine
+    TransactionStateMachine --> PreAuthValidation
+    PreAuthValidation --> RiskAssessment
+    RiskAssessment --> LimitValidation
+    LimitValidation --> LockAcquisition
+    LockAcquisition --> SagaOrchestrator
+    
+    SagaOrchestrator --> BalanceRead
+    BalanceRead --> BalanceCalculation
+    BalanceCalculation --> BalanceWrite
+    BalanceWrite --> CacheUpdate
+    CacheUpdate --> SagaOrchestrator
+    
+    SagaOrchestrator --> TransactionCommit
+    TransactionCommit --> AuditRecording
+    AuditRecording --> EventPublication
+    EventPublication --> LockRelease
+    
+    SagaOrchestrator -.->|Failure Detection| CompensationEngine
+    CompensationEngine --> BalanceRollback
+    CompensationEngine --> CacheInvalidation
+    CompensationEngine --> AuditCompensation
+    CompensationEngine --> LockCleanup
+    
+    OptimisticLockManager -.->|Version Conflict| CompensationEngine
+    BalanceWrite --> OptimisticLockManager
+    CacheUpdate --> OptimisticLockManager
 ```
 
-## Technology Stack & Configuration
+### Advanced Concurrency Control Configuration
 
 ```yaml
-Application Configuration:
-  spring:
-    application:
-      name: fast-liquidity-service
-    webflux:
-      # Enable virtual threads for reactive processing
-      virtual-threads: true
-    cloud:
-      gcp:
-        spanner:
-          instance-id: fast-payment-instance
-          database: liquidity_db
-          pool:
-            max-sessions: 100
-            min-sessions: 25
-            max-idle-sessions: 50
-    data:
-      redis:
-        cluster:
-          nodes: 
-            - redis-node-1:6379
-            - redis-node-2:6379
-            - redis-node-3:6379
-        timeout: 1000ms
-        lettuce:
-          pool:
-            max-active: 20
-            max-idle: 10
-            min-idle: 5
-
-Security Configuration:
-  spring:
-    security:
-      oauth2:
-        resourceserver:
-          jwt:
-            issuer-uri: https://auth.anz.com.sg/oauth2
+concurrency_control_configuration:
+  
+  # Optimistic locking strategy
+  optimistic_locking:
+    version_strategy: "timestamp_based_with_sequence"
+    conflict_detection: "compare_and_swap"
+    retry_policy:
+      max_attempts: 5
+      initial_delay: "PT0.01S"  # 10ms
+      max_delay: "PT0.1S"       # 100ms
+      multiplier: 2.0
+      jitter: true
+      
+    conflict_resolution:
+      strategy: "last_writer_wins_with_validation"
+      validation_checks:
+        - "balance_non_negative"
+        - "limit_compliance"
+        - "account_status_active"
+        - "transaction_amount_reasonable"
+      
+      conflict_handling:
+        high_contention_threshold: 10  # conflicts per minute
+        high_contention_action: "serialize_with_queue"
+        queue_timeout: "PT5S"
+        queue_max_size: 1000
+  
+  # Distributed locking for critical sections
+  distributed_locking:
+    lock_provider: "redis_redlock"
+    lock_configuration:
+      lock_timeout: "PT30S"  # 30 seconds maximum lock hold time
+      lock_acquisition_timeout: "PT5S"  # 5 seconds to acquire lock
+      lock_extension_enabled: true
+      automatic_extension_threshold: "PT10S"  # Extend if 10s remaining
+      
+    redlock_configuration:
+      redis_instances: 3  # Minimum for Redlock algorithm
+      quorum: 2  # Majority consensus required
+      retry_delay: "PT0.2S"
+      retry_count: 3
+      clock_drift_factor: 0.01
+      
+    lock_patterns:
+      balance_modification:
+        pattern: "balance_lock:{participant_id}:{currency}"
+        scope: "single_currency_balance"
+        timeout: "PT10S"
         
-Rate Limiting:
-  bucket4j:
-    filters:
-      - id: webmethods-rate-limit
-        url: "/api/v1/liquidity/.*"
-        rate-limits:
-          - bandwidths:
-              - capacity: 1000
-                time: 1
-                unit: minutes
-                refill-speed: interval
-        cache-name: rate-limit-cache
-
-Monitoring:
-  management:
-    endpoints:
-      web:
-        exposure:
-          include: health,metrics,prometheus,liquidity
-    endpoint:
-      health:
-        show-details: always
-    metrics:
-      tags:
-        service: fast-liquidity-service
-        version: 1.0.0
-      export:
-        prometheus:
-          enabled: true
-
-JVM Configuration:
-  memory: "-Xms4g -Xmx8g"
-  gc: "-XX:+UseZGC -XX:+UnlockExperimentalVMOptions"
-  virtual-threads: "--enable-preview -XX:+UseVirtualThreads"
-  monitoring: "-XX:+FlightRecorder -XX:StartFlightRecording=duration=0s"
+      net_debit_cap_update:
+        pattern: "ndc_lock:{participant_id}:{currency}"
+        scope: "net_debit_cap_operations"
+        timeout: "PT15S"
+        
+      bulk_operations:
+        pattern: "bulk_lock:{operation_type}:{batch_id}"
+        scope: "batch_balance_operations"
+        timeout: "PT60S"
+  
+  # Transaction isolation levels
+  transaction_isolation:
+    spanner_transactions:
+      default_isolation: "SERIALIZABLE"
+      read_only_staleness: "EXACT_STALENESS_1_SECOND"
+      
+      transaction_types:
+        balance_read:
+          isolation: "STRONG_READ"
+          retry_aborts: true
+          max_staleness: "PT1S"
+          
+        balance_write:
+          isolation: "SERIALIZABLE"
+          commit_timeout: "PT10S"
+          mutation_limit: 20000
+          
+        bulk_operations:
+          isolation: "SERIALIZABLE"
+          batch_size: 100
+          parallel_execution: true
+          
+    redis_transactions:
+      multi_exec_timeout: "PT3S"
+      pipeline_mode: true
+      optimistic_locking: true
+      watch_keys: ["balance_keys", "lock_keys"]
+  
+  # Deadlock detection and prevention
+  deadlock_management:
+    detection_strategy: "timeout_based_with_ordering"
+    prevention_strategy: "ordered_resource_acquisition"
+    
+    resource_ordering:
+      - "participant_id_ascending"
+      - "currency_alphabetical"
+      - "operation_type_priority"
+      
+    timeout_configuration:
+      lock_acquisition_timeout: "PT5S"
+      transaction_timeout: "PT30S"
+      deadlock_detection_interval: "PT10S"
+      
+    recovery_strategy:
+      victim_selection: "youngest_transaction"
+      retry_delay: "PT1S"
+      max_retry_attempts: 3
+      escalation_threshold: 5  # deadlocks per minute
 ```
+
+## Comprehensive Chaos Engineering for Financial Resilience
+
+### Financial System Chaos Testing Framework
+
+```mermaid
+graph TB
+    subgraph "Financial Chaos Engineering Platform"
+        FinancialChaosOrchestrator[Financial Chaos Orchestrator<br/>Production-safe Experiments<br/>Monetary Impact Assessment<br/>Automatic Safety Stops]
+        BalanceConsistencyValidator[Balance Consistency Validator<br/>Real-time Reconciliation<br/>Audit Trail Verification<br/>Data Integrity Checks]
+        RegulatoryComplianceMonitor[Regulatory Compliance Monitor<br/>MAS Requirement Validation<br/>Audit Trail Completeness<br/>Reporting Accuracy]
+        FinancialSafetyController[Financial Safety Controller<br/>Loss Prevention Mechanisms<br/>Emergency Circuit Breakers<br/>Rollback Capabilities]
+    end
+    
+    subgraph "High-Contention Scenario Testing"
+        ConcurrentBalanceUpdates[Concurrent Balance Updates<br/>Simulate 1000+ Simultaneous Requests<br/>Optimistic Lock Contention<br/>Performance Under Load]
+        DeadlockSimulation[Deadlock Simulation<br/>Complex Lock Ordering Scenarios<br/>Multi-resource Contention<br/>Recovery Mechanism Testing]
+        HighFrequencyTrading[High-Frequency Trading Simulation<br/>Microsecond-level Operations<br/>Burst Traffic Patterns<br/>System Saturation Testing]
+        CacheConsistencyStress[Cache Consistency Stress Test<br/>Cache Invalidation Scenarios<br/>Multi-layer Cache Coherence<br/>Distributed State Validation]
+    end
+    
+    subgraph "Data Corruption & Recovery Testing"
+        VersionConflictInjection[Version Conflict Injection<br/>Optimistic Lock Failure Scenarios<br/>Concurrent Modification Testing<br/>Conflict Resolution Validation]
+        DatabaseCorruption[Database Corruption Simulation<br/>Partial Write Failures<br/>Transaction Rollback Testing<br/>Data Recovery Validation]
+        CacheCorruption[Cache Corruption Testing<br/>Redis Node Failures<br/>Cache-Database Inconsistency<br/>Automatic Recovery Verification]
+        NetworkPartitionTesting[Network Partition Testing<br/>Split-brain Scenarios<br/>CAP Theorem Validation<br/>Consistency Preservation]
+    end
+    
+    subgraph "Regulatory & Compliance Chaos"
+        AuditTrailDisruption[Audit Trail Disruption<br/>Logging System Failures<br/>Regulatory Reporting Impact<br/>Compliance Verification]
+        ReportingSystemFailure[Reporting System Failure<br/>MAS Integration Testing<br/>Backup Reporting Mechanisms<br/>Manual Intervention Procedures]
+        ComplianceRuleChanges[Dynamic Compliance Rule Changes<br/>Runtime Configuration Updates<br/>Business Rule Adaptation<br/>System Behavior Validation]
+        RegulatoryCutoffTesting[Regulatory Cutoff Testing<br/>End-of-day Processing<br/>Settlement Window Management<br/>Time-critical Operations]
+    end
+    
+    FinancialChaosOrchestrator --> BalanceConsistencyValidator
+    FinancialChaosOrchestrator --> RegulatoryComplianceMonitor
+    FinancialChaosOrchestrator --> FinancialSafetyController
+    
+    FinancialChaosOrchestrator --> ConcurrentBalanceUpdates
+    FinancialChaosOrchestrator --> DeadlockSimulation
+    FinancialChaosOrchestrator --> HighFrequencyTrading
+    FinancialChaosOrchestrator --> CacheConsistencyStress
+    
+    FinancialChaosOrchestrator --> VersionConflictInjection
+    FinancialChaosOrchestrator --> DatabaseCorruption
+    FinancialChaosOrchestrator --> CacheCorruption
+    FinancialChaosOrchestrator --> NetworkPartitionTesting
+    
+    FinancialChaosOrchestrator --> AuditTrailDisruption
+    FinancialChaosOrchestrator --> ReportingSystemFailure
+    FinancialChaosOrchestrator --> ComplianceRuleChanges
+    FinancialChaosOrchestrator --> RegulatoryCutoffTesting
+    
+    BalanceConsistencyValidator -.->|Inconsistency Detected| FinancialSafetyController
+    RegulatoryComplianceMonitor -.->|Compliance Violation| FinancialSafetyController
+    FinancialSafetyController -.->|Emergency Stop| FinancialChaosOrchestrator
+```
+
+### Financial Chaos Testing Scenarios
+
+```yaml
+financial_chaos_testing_scenarios:
+  
+  # High-contention balance operation testing
+  concurrent_balance_stress_tests:
+    massive_concurrent_updates:
+      name: "Massive Concurrent Balance Updates"
+      description: "Simulate 2000 concurrent balance update requests for single participant"
+      financial_safety_limits:
+        max_test_amount_per_participant: "1000.00 SGD"
+        test_environment_only: true
+        automatic_rollback: true
+        balance_monitoring: "continuous"
+      
+      test_configuration:
+        concurrent_users: 2000
+        duration: "PT10M"
+        operation_types: ["DEBIT", "CREDIT", "RESERVE", "RELEASE"]
+        amount_range: "1.00-50.00 SGD"
+        participants: ["TESTSGSG001", "TESTSGSG002", "TESTSGSG003"]
+        
+      expected_behavior:
+        - "All transactions processed without double-spending"
+        - "Balance consistency maintained throughout test"
+        - "Optimistic locking prevents data corruption"
+        - "Performance degradation graceful under contention"
+        - "Audit trail completeness maintained"
+        
+      success_criteria:
+        balance_accuracy: "100%"
+        transaction_success_rate: ">95%"
+        data_consistency: "ACID_compliant"
+        performance_degradation: "<300% of baseline"
+        audit_completeness: "100%"
+        
+      monitoring_points:
+        - "balance_consistency_real_time"
+        - "optimistic_lock_conflict_rate"
+        - "transaction_retry_patterns"
+        - "database_performance_metrics"
+        - "cache_hit_miss_ratios"
+    
+    deadlock_resolution_testing:
+      name: "Complex Deadlock Scenario Resolution"
+      description: "Create intentional deadlock scenarios and verify resolution"
+      financial_safety_limits:
+        read_only_operations: true
+        no_balance_modifications: true
+        simulation_mode: true
+        
+      deadlock_scenarios:
+        - circular_dependency: "A→B→C→A lock acquisition pattern"
+        - resource_starvation: "High-priority transactions blocking low-priority"
+        - timeout_cascades: "Lock timeouts causing cascade failures"
+        
+      expected_behavior:
+        - "Deadlock detection within 10 seconds"
+        - "Automatic victim selection and rollback"
+        - "No permanent resource locks"
+        - "System recovery within 30 seconds"
+        - "Transaction retry success >90%"
+        
+      success_criteria:
+        deadlock_detection_time: "<10s"
+        system_recovery_time: "<30s"
+        transaction_retry_success_rate: ">90%"
+        data_integrity: "maintained"
+        
+  # Data corruption and recovery testing
+  data_integrity_chaos_tests:
+    optimistic_lock_conflict_storm:
+      name: "Optimistic Lock Conflict Storm"
+      description: "Force high version conflict rates and test resolution"
+      test_setup:
+        participants: 10
+        concurrent_operations: 500
+        version_conflict_rate_target: "50%"
+        test_duration: "PT15M"
+        
+      fault_injection:
+        - artificial_delay_injection: "Random delays in transaction processing"
+        - version_number_manipulation: "Simulate stale version reads"
+        - cache_invalidation_delays: "Delay cache updates to create conflicts"
+        
+      expected_behavior:
+        - "High conflict detection and resolution"
+        - "Automatic retry with exponential backoff"
+        - "No lost transactions"
+        - "Balance accuracy maintained"
+        - "Performance graceful degradation"
+        
+      success_criteria:
+        zero_transaction_loss: "100%"
+        balance_accuracy: "100%"
+        conflict_resolution_success: ">95%"
+        system_stability: "maintained"
+    
+    cache_database_inconsistency:
+      name: "Cache-Database Inconsistency Resolution"
+      description: "Create cache-database inconsistencies and test recovery"
+      inconsistency_scenarios:
+        - cache_ahead_of_database: "Cache shows updated balance, DB doesn't"
+        - database_ahead_of_cache: "DB updated but cache shows stale data"
+        - partial_cache_updates: "Some cache layers updated, others not"
+        - cache_corruption: "Random cache data corruption"
+        
+      recovery_mechanisms_tested:
+        - automatic_cache_invalidation: "Detect and clear stale cache"
+        - cache_warming_strategies: "Proactive cache refresh"
+        - fallback_to_database: "Bypass cache when inconsistency detected"
+        - consistency_validation: "Regular cache-DB reconciliation"
+        
+      expected_behavior:
+        - "Inconsistency detection within 1 minute"
+        - "Automatic cache invalidation and refresh"
+        - "Fallback to authoritative database source"
+        - "Client requests unaffected by inconsistency"
+        - "Audit trail of inconsistency events"
+        
+      success_criteria:
+        inconsistency_detection_time: "<60s"
+        client_impact: "0% failed requests"
+        data_recovery_success: "100%"
+        audit_completeness: "100%"
+
+## Balance Management UI - Advanced Operations Dashboard
+
+### Comprehensive Balance Management Interface
+
+```yaml
+balance_management_ui_specification:
+  
+  # Main dashboard architecture
+  dashboard_layout:
+    header_section:
+      title: "Fast Liquidity Service - Balance Management Console"
+      real_time_indicators:
+        - system_health_status: "Color-coded service health indicator"
+        - total_participants: "Active participant count"
+        - total_balance_under_management: "Aggregated balance across all currencies"
+        - active_transactions_per_second: "Real-time TPS counter"
+        - average_response_time: "Current API response time"
+        - sla_compliance_percentage: "24-hour SLA compliance rate"
+      
+      quick_action_buttons:
+        - emergency_stop: "Emergency stop all balance operations"
+        - system_maintenance_mode: "Enable maintenance mode"
+        - manual_reconciliation: "Trigger manual balance reconciliation"
+        - export_balance_report: "Generate comprehensive balance report"
+        - emergency_override: "Emergency balance override (requires approval)"
+    
+    navigation_tabs:
+      - "Real-time Monitoring"
+      - "Balance Management" 
+      - "Participant Configuration"
+      - "Risk & Compliance"
+      - "Reconciliation & Audit"
+      - "System Configuration"
+      - "Emergency Operations"
+    
+    real_time_widgets:
+      balance_overview_widget:
+        title: "Balance Overview by Currency"
+        visualization: "Multi-currency balance treemap"
+        data_refresh: "5 seconds"
+        drill_down_capability: "Click to participant-level detail"
+        
+      transaction_flow_widget:
+        title: "Real-time Transaction Flow"
+        visualization: "Sankey diagram showing money flows"
+        transaction_types: ["CREDIT", "DEBIT", "RESERVE", "RELEASE"]
+        time_window: "Last 5 minutes"
+        
+      risk_monitoring_widget:
+        title: "Risk Monitoring Dashboard"
+        components:
+          - net_debit_cap_utilization: "Progress bars for each participant"
+          - concentration_risk: "Top 10 largest exposures"
+          - limit_breaches: "Active limit violations"
+          - regulatory_thresholds: "Proximity to regulatory limits"
+  
+  # Balance management interface
+  balance_management_screen:
+    participant_balance_grid:
+      description: "Comprehensive view of all participant balances"
+      
+      grid_configuration:
+        columns:
+          - participant_id: "BIC with institution name lookup"
+          - participant_name: "Full institution name"
+          - currency: "Currency code with flag icon"
+          - current_balance: "Formatted balance with precision"
+          - available_balance: "Available after reserves"
+          - reserved_amount: "Currently reserved funds"
+          - net_debit_cap_limit: "Configured limit"
+          - net_debit_cap_used: "Current usage amount"
+          - net_debit_cap_utilization: "Percentage with color coding"
+          - account_status: "Status with icon indicator"
+          - last_transaction_time: "Timestamp of last activity"
+          - version_number: "Optimistic locking version"
+          - actions: "View Details, Adjust, Reserve, Override"
+        
+        formatting_rules:
+          balance_precision: "2 decimal places for major currencies"
+          color_coding:
+            positive_balance: "Green background"
+            negative_balance: "Red background with warning icon"
+            near_limit: "Orange background for >80% utilization"
+            limit_exceeded: "Red background with alert icon"
+          
+          status_indicators:
+            active: "Green circle"
+            suspended: "Yellow triangle"
+            frozen: "Red square"
+            under_review: "Blue question mark"
+        
+        sorting_filtering:
+          default_sort: "Net debit cap utilization descending"
+          quick_filters:
+            - "High utilization (>80%)"
+            - "Limit breaches"
+            - "Negative balances"
+            - "Recently active"
+            - "Suspended accounts"
+          
+          advanced_search:
+            - participant_name_search: "Fuzzy text search"
+            - balance_range_filter: "Min/max balance range"
+            - currency_multi_select: "Multiple currency selection"
+            - date_range_filter: "Last activity date range"
+            - status_filter: "Account status multi-select"
+      
+      bulk_operations:
+        description: "Bulk operations for multiple participants"
+        operations:
+          - bulk_balance_adjustment: "Apply adjustments to multiple accounts"
+          - bulk_limit_updates: "Update net debit cap limits"
+          - bulk_status_changes: "Change account status for multiple participants"
+          - bulk_reconciliation: "Trigger reconciliation for selected accounts"
+          - bulk_report_generation: "Generate reports for selected participants"
+        
+        safety_controls:
+          - selection_limit: "Maximum 100 participants per bulk operation"
+          - approval_workflow: "Multi-level approval for significant changes"
+          - impact_preview: "Show estimated impact before execution"
+          - rollback_capability: "Ability to undo bulk operations"
+          - audit_logging: "Complete audit trail for all bulk operations"
+    
+    balance_adjustment_interface:
+      description: "Detailed balance adjustment and override capabilities"
+      
+      adjustment_types:
+        manual_adjustment:
+          description: "Manual balance adjustment with approval workflow"
+          input_fields:
+            - adjustment_amount: "Positive or negative amount"
+            - adjustment_reason: "Required reason from predefined list"
+            - supporting_documentation: "File upload for supporting documents"
+            - effective_date: "Date picker for value date"
+            - approval_required: "Automatic determination based on amount"
+            - business_justification: "Free text business justification"
+          
+          validation_rules:
+            - amount_validation: "Must be within configured limits"
+            - reason_mandatory: "Reason must be selected"
+            - documentation_required: "For adjustments >$100K"
+            - dual_approval: "Required for adjustments >$1M"
+            - regulatory_check: "Verify compliance with limits"
+          
+          approval_workflow:
+            tier1_approval: "Team lead approval (<$100K)"
+            tier2_approval: "Manager approval ($100K-$1M)"
+            tier3_approval: "Senior manager + risk approval (>$1M)"
+            emergency_override: "Emergency bypass with enhanced audit"
+        
+        balance_transfer:
+          description: "Transfer balance between participants"
+          features:
+            - source_participant_selection: "Dropdown with balance validation"
+            - destination_participant_selection: "Dropdown with limit validation"
+            - amount_input: "With real-time validation"
+            - transfer_reason: "Required business reason"
+            - fx_rate_handling: "Automatic FX rate application if different currencies"
+            - impact_preview: "Show impact on both participants"
+            - regulatory_validation: "Automatic compliance checking"
+        
+        reserve_management:
+          description: "Manage balance reserves and holds"
+          operations:
+            - create_reserve: "Place hold on funds"
+            - release_reserve: "Release held funds"
+            - modify_reserve: "Change reserve amount"
+            - expire_reserve: "Set automatic expiry"
+            - transfer_reserve: "Transfer reserve to another participant"
+          
+          reserve_types:
+            - payment_processing_reserve: "For pending payments"
+            - regulatory_reserve: "Regulatory capital requirements"
+            - risk_reserve: "Risk management holds"
+            - operational_reserve: "Operational cash management"
+            - manual_reserve: "Manual holds by operations team"
+    
+    net_debit_cap_management:
+      description: "Comprehensive net debit cap configuration and monitoring"
+      
+      limit_configuration:
+        participant_limit_setting:
+          - daily_limit: "Maximum daily net debit position"
+          - monthly_limit: "Maximum monthly cumulative limit"
+          - single_transaction_limit: "Maximum single transaction amount"
+          - concentration_limit: "Maximum exposure to single counterparty"
+          - sector_limit: "Limits by business sector or industry"
+          
+        dynamic_limit_adjustment:
+          - time_based_multipliers: "Different limits for business hours vs off-hours"
+          - volatility_adjustments: "Reduce limits during market volatility"
+          - credit_rating_based: "Adjust limits based on credit rating changes"
+          - regulatory_override: "Temporary regulatory imposed limits"
+          - emergency_reduction: "Rapid limit reduction capability"
+        
+        approval_workflow_configuration:
+          - auto_approval_thresholds: "Automatic approval up to configured amounts"
+          - manual_review_triggers: "Conditions requiring manual review"
+          - escalation_matrix: "Who approves at each level"
+          - emergency_procedures: "Fast-track approval for emergencies"
+          - override_authorities: "Who can override system limits"
+      
+      real_time_monitoring:
+        utilization_dashboard:
+          - current_utilization_meters: "Real-time gauges for each participant"
+          - trend_analysis: "Historical utilization patterns"
+          - predictive_alerts: "Early warning for approaching limits"
+          - breach_notifications: "Immediate alerts for limit breaches"
+          - recovery_timeline: "Projected time to return under limits"
+        
+        risk_analytics:
+          - concentration_analysis: "Risk concentration by participant/currency"
+          - correlation_analysis: "Risk correlation between participants"
+          - stress_testing: "What-if scenario analysis"
+          - monte_carlo_simulation: "Statistical risk modeling"
+          - var_calculation: "Value at Risk calculations"
+  
+  # Scheduled downtime and maintenance management
+  maintenance_management_screen:
+    description: "Manage planned maintenance and system downtimes"
+    
+    maintenance_scheduling:
+      planned_maintenance_calendar:
+        - calendar_view: "Monthly calendar with maintenance windows"
+        - maintenance_types: "System update, database maintenance, network upgrade"
+        - impact_assessment: "Estimated impact on operations"
+        - participant_notification: "Automatic stakeholder notifications"
+        - rollback_planning: "Maintenance rollback procedures"
+        
+      maintenance_window_creation:
+        fields:
+          - maintenance_type: "Dropdown selection of maintenance categories"
+          - start_time: "Date/time picker with timezone support"
+          - duration: "Estimated duration with buffer time"
+          - impact_level: "System-wide, service-specific, participant-specific"
+          - affected_services: "Multi-select of impacted services"
+          - participant_impact: "Which participants will be affected"
+          - business_justification: "Business reason for maintenance"
+          - approver_list: "Required approvals for maintenance"
+          - rollback_plan: "Detailed rollback procedures"
+          - communication_plan: "Stakeholder communication strategy"
+        
+        validation_rules:
+          - blackout_periods: "No maintenance during regulatory cutoffs"
+          - minimum_notice: "Minimum 48-hour advance notice"
+          - impact_assessment: "Must assess and document impact"
+          - approval_required: "Multi-level approval for system-wide maintenance"
+          - overlap_detection: "Prevent overlapping maintenance windows"
+    
+    participant_notification_system:
+      notification_channels:
+        - email_notifications: "Automated email to registered contacts"
+        - api_notifications: "REST API calls to participant systems"
+        - dashboard_alerts: "In-application alert banners"
+        - sms_alerts: "SMS for critical maintenance"
+        - phone_calls: "Automated voice calls for emergency maintenance"
+        
+      notification_templates:
+        - planned_maintenance: "Standard planned maintenance notification"
+        - emergency_maintenance: "Emergency maintenance notification"
+        - maintenance_completion: "Maintenance completion confirmation"
+        - maintenance_delay: "Notification of maintenance delays"
+        - service_restoration: "Service restoration confirmation"
+        
+      communication_workflow:
+        - advance_notification: "Initial notification when maintenance scheduled"
+        - reminder_notifications: "24-hour and 1-hour reminders"
+        - start_notification: "Notification when maintenance begins"
+        - progress_updates: "Regular updates during extended maintenance"
+        - completion_notification: "Confirmation when maintenance completes"
+    
+    emergency_maintenance_procedures:
+      emergency_declaration:
+        - emergency_classification: "System failure, security breach, regulatory requirement"
+        - impact_assessment: "Immediate assessment of business impact"
+        - stakeholder_notification: "Immediate notification to key stakeholders"
+        - approval_acceleration: "Fast-track approval procedures"
+        - documentation_requirements: "Minimum required documentation"
+        
+      emergency_response_team:
+        - incident_commander: "Designated leader for emergency response"
+        - technical_team: "Core technical team for issue resolution"
+        - business_team: "Business stakeholders for impact assessment"
+        - communication_team: "Responsible for stakeholder communication"
+        - management_escalation: "Executive escalation procedures"
+  
+  # Configuration management for operations
+  configuration_management_screen:
+    description: "Manage system configuration parameters"
+    
+    system_parameters:
+      performance_tuning:
+        - cache_configuration: "Cache size, TTL, and refresh policies"
+        - database_connection_pools: "Connection pool sizing and timeouts"
+        - api_rate_limits: "Rate limiting configuration for external APIs"
+        - circuit_breaker_thresholds: "Failure thresholds and recovery timings"
+        - retry_policies: "Retry count and backoff strategies"
+        
+      business_rules:
+        - transaction_limits: "Global transaction amount limits"
+        - processing_windows: "Business hours and cutoff times"
+        - currency_settings: "Supported currencies and precision rules"
+        - validation_rules: "Business rule validation parameters"
+        - approval_thresholds: "Automatic vs manual approval thresholds"
+      
+      integration_settings:
+        - external_api_endpoints: "URLs and authentication for external services"
+        - message_queue_settings: "Kafka topic and consumer group configurations"
+        - database_settings: "Spanner and Redis connection parameters"
+        - security_settings: "Authentication and authorization parameters"
+        - monitoring_settings: "Logging levels and metric collection configuration"
+    
+    configuration_change_management:
+      change_approval_workflow:
+        - low_risk_changes: "Automatic approval for predefined low-risk changes"
+        - medium_risk_changes: "Single approval required"
+        - high_risk_changes: "Dual approval with business and technical sign-off"
+        - emergency_changes: "Post-facto approval with enhanced documentation"
+        
+      configuration_testing:
+        - validation_rules: "Automatic validation of configuration changes"
+        - impact_assessment: "Automated assessment of change impact"
+        - rollback_testing: "Verify rollback procedures work correctly"
+        - integration_testing: "Test integration points after configuration changes"
+        
+      audit_and_compliance:
+        - change_history: "Complete history of all configuration changes"
+        - approval_audit_trail: "Audit trail of all approvals and decisions"
+        - compliance_validation: "Verify changes meet regulatory requirements"
+        - documentation_requirements: "Mandatory documentation for each change"
+```
+
+## High-Performance Technology Stack & Financial Optimization
+
+```yaml
+financial_system_technology_optimization:
+  
+  # JVM optimization for financial precision and performance
+  financial_jvm_optimization:
+    memory_management:
+      heap_configuration:
+        initial_heap: "-Xms16g"
+        max_heap: "-Xmx32g"
+        young_generation: "-XX:NewRatio=2"  # 33% young generation for financial allocations
+        survivor_ratio: "-XX:SurvivorRatio=8"
+        large_object_threshold: "-XX:PretenureSizeThreshold=1m"  # Financial objects
+        
+      financial_precision_settings:
+        decimal_precision: "-Djava.math.BigDecimal.precision=38"  # High precision arithmetic
+        rounding_mode: "-Djava.math.BigDecimal.roundingMode=HALF_EVEN"  # Banker's rounding
+        decimal_context: "-Djava.math.MathContext.precision=38"
+        
+      numa_optimization:
+        numa_awareness: "-XX:+UseNUMA"
+        numa_interleaving: "-XX:+UseNUMAInterleaving"
+        processor_bind: "numactl --cpubind=0,1 --membind=0,1"
+    
+    garbage_collection_optimization:
+      low_latency_collector:
+        collector: "-XX:+UseZGC"
+        gc_tuning:
+          - "-XX:MaxGCPauseMillis=1"  # Ultra-low latency for real-time balance operations
+          - "-XX:+UnlockExperimentalVMOptions"
+          - "-XX:+UseTransparentHugePages"
+          - "-XX:+UseLargePages"
+          - "-XX:LargePageSizeInBytes=2m"
+          - "-XX:+AlwaysPreTouch"  # Pre-touch memory for consistent performance
+        
+      gc_monitoring_financial:
+        gc_logging:
+          - "-Xlog:gc*:gc-financial-%t.log:time,tags,pid"
+          - "-XX:+LogGCApplicationStoppedTime"
+          - "-XX:+PrintGCApplicationConcurrentTime"
+          
+        financial_gc_analysis:
+          - gc_pause_budget: "Maximum 1ms pause per operation"
+          - allocation_rate_monitoring: "Track financial object allocation patterns"
+          - gc_impact_on_sla: "Measure GC impact on response time SLAs"
+    
+    concurrency_optimization_financial:
+      virtual_threads_financial:
+        enable_virtual_threads: "--enable-preview -XX:+UseVirtualThreads"
+        financial_thread_tuning:
+          - "-Djdk.virtualThreadScheduler.parallelism=600"  # High concurrency for balance operations
+          - "-Djdk.virtualThreadScheduler.maxPoolSize=1200"
+          - "-Djdk.virtualThreadScheduler.minRunnable=200"
+        
+      lock_optimization:
+        biased_locking: "-XX:+UseBiasedLocking"  # Optimize for single-threaded balance access patterns
+        thread_contention_monitoring: "-XX:+PrintConcurrentLocks"
+        lock_coarsening: "-XX:+DoEscapeAnalysis"
+        
+      financial_thread_safety:
+        concurrent_collections: "Use ConcurrentHashMap for balance caches"
+        atomic_operations: "AtomicReference for balance updates"
+        lock_free_algorithms: "Lock-free data structures where possible"
+  
+  # Spring Boot optimization for financial services
+  spring_financial_optimization:
+    webflux_financial_tuning:
+      netty_configuration:
+        event_loop_threads: 800  # High concurrency for financial API calls
+        worker_threads: 600
+        max_connections: 8000
+        connection_timeout: "PT5S"  # Fast timeout for financial operations
+        socket_timeout: "PT10S"
+        max_frame_payload_length: 1048576  # 1MB for financial reports
+        
+      reactor_optimization:
+        buffer_size: 4096  # Larger buffers for financial data processing
+        ring_buffer_size: 262144  # Power of 2, optimized for high throughput
+        prefetch_size: 512
+        elastic_scheduler_size: 600
+        
+      financial_backpressure:
+        strategy: "error"  # Fail fast for financial operations
+        buffer_size: 5000
+        overflow_strategy: "error"  # Never drop financial transactions
+        error_mode: "terminate"  # Strict error handling for financial data
+    
+    data_access_financial_optimization:
+      spanner_financial_configuration:
+        connection_management:
+          min_sessions: 200  # High session count for concurrent balance operations
+          max_sessions: 4000  # Very high for peak financial processing
+          max_idle_sessions: 1000
+          keep_alive_interval: "PT10M"
+          session_pool_maintenance_period: "PT30S"
+          
+        financial_query_optimization:
+          statement_timeout: "PT5S"  # Fast timeout for balance queries
+          rpc_timeout: "PT10S"
+          commit_timeout: "PT5S"  # Quick commits for financial transactions
+          batch_create_sessions: true
+          read_only_staleness: "EXACT_STALENESS_100_MILLISECONDS"  # Fresh data for balances
+          
+        financial_transaction_optimization:
+          max_mutations_per_batch: 10000  # Large batches for balance updates
+          max_batch_size_bytes: 104857600  # 100MB for financial reporting
+          batch_timeout: "PT15S"
+          transaction_tag: "financial_operation"
+          
+      redis_financial_optimization:
+        financial_connection_management:
+          max_active: 400  # Very high for concurrent balance lookups
+          max_idle: 200
+          min_idle: 100
+          max_wait: "PT0.5S"  # Quick timeout for balance operations
+          test_on_borrow: false
+          test_on_return: false
+          
+        financial_cluster_configuration:
+          max_redirections: 10
+          periodic_refresh_period: "PT10S"
+          adaptive_refresh_triggers_timeout: "PT10S"
+          validate_cluster_node_membership: false
+          
+        financial_pipeline_optimization:
+          auto_flush_enabled: false  # Manual control for financial operations
+          buffer_usage_ratio: 0.95  # High utilization for throughput
+          command_timeout: "PT1S"  # Fast timeout for balance operations
+          
+        financial_memory_optimization:
+          max_total_memory_mb: 32768  # 32GB memory for financial cache
+          eviction_policy: "allkeys-lru"
+          memory_usage_threshold: 0.9
+  
+  # Financial data processing optimization
+  financial_data_processing:
+    decimal_arithmetic_optimization:
+      big_decimal_configuration:
+        precision: 38  # Sufficient for financial calculations
+        rounding_mode: "HALF_EVEN"  # Banker's rounding for fairness
+        math_context: "DECIMAL128"  # IEEE 754-2008 decimal128
+        
+      currency_handling:
+        currency_precision_map:
+          SGD: 2
+          USD: 2
+          EUR: 2
+          JPY: 0
+          BTC: 8
+        
+        fx_rate_precision: 10  # High precision for FX rates
+        amount_validation: "strict_positive_or_zero"
+        currency_conversion_rounding: "HALF_EVEN"
+    
+    balance_calculation_optimization:
+      calculation_strategy: "precise_decimal_arithmetic"
+      intermediate_precision: 40  # Extra precision for intermediate calculations
+      final_rounding: "currency_specific"
+      
+      performance_optimization:
+        balance_cache_strategy: "compute_once_cache_everywhere"
+        calculation_parallelization: "currency_parallel_computation"
+        bulk_calculation_optimization: "vectorized_operations"
+        
+      validation_framework:
+        balance_consistency_checks: "automatic_after_each_operation"
+        arithmetic_overflow_detection: "enabled"
+        precision_loss_detection: "enabled"
+        rounding_audit_trail: "complete"
+  
+  # Financial monitoring and observability
+  financial_observability:
+    metrics_optimization:
+      financial_specific_metrics:
+        - "balance.operation.duration"
+        - "balance.calculation.precision"
+        - "transaction.monetary.volume"
+        - "currency.conversion.accuracy"
+        - "net.debit.cap.utilization"
+        - "regulatory.limit.proximity"
+        - "audit.trail.completeness"
+        - "reconciliation.variance.percentage"
+        
+      high_resolution_metrics:
+        collection_interval: "PT1S"  # 1-second resolution for financial metrics
+        retention_period: "P90D"  # 90 days for financial analysis
+        aggregation_windows: ["1m", "5m", "15m", "1h", "1d"]
+        percentiles: [0.5, 0.75, 0.9, 0.95, 0.99, 0.999]
+        
+      financial_sla_metrics:
+        balance_query_latency_target: "50ms"
+        balance_update_latency_target: "100ms"
+        authorization_response_target: "200ms"
+        reconciliation_accuracy_target: "100%"
+        audit_completeness_target: "100%"
+    
+    financial_distributed_tracing:
+      trace_financial_operations:
+        trace_sampling_rate: 0.1  # 10% sampling for financial operations
+        financial_span_attributes:
+          - "participant.id"
+          - "currency.code"
+          - "transaction.amount"
+          - "operation.type"
+          - "authorization.reference"
+          - "balance.version"
+          - "compliance.status"
+          
+        financial_baggage_propagation:
+          - "participant-id"
+          - "currency-code"
+          - "authorization-reference"
+          - "audit-trail-id"
+          - "compliance-requirement"
+          
+      financial_span_processing:
+        batch_size: 4096
+        export_timeout: "PT5S"
+        schedule_delay: "PT0.5S"
+        max_export_batch_size: 4096
+    
+    financial_structured_logging:
+      financial_log_format:
+        format: "json_with_financial_context"
+        timestamp_precision: "milliseconds"
+        include_financial_context: true
+        mask_sensitive_data: true
+        
+      financial_log_levels:
+        balance_operations: "DEBUG"
+        authorization_decisions: "INFO"
+        limit_breaches: "WARN"
+        compliance_violations: "ERROR"
+        audit_events: "INFO"
+        reconciliation_variances: "WARN"
+        
+      financial_audit_logging:
+        audit_log_separation: true
+        immutable_audit_storage: true
+        regulatory_log_retention: "7_years"
+        audit_log_integrity: "cryptographic_hash_chain"
+        real_time_audit_alerts: true
+        
+      log_performance_optimization:
+        async_logging: true
+        queue_size: 131072  # Large queue for high-volume financial logging
+        discarding_threshold: 0  # Never discard financial logs
+        max_flush_time: 1000  # 1 second max flush time
+        never_block: false  # Block if necessary to preserve financial logs
+```
+  
+  # Regulatory and compliance chaos testing
+  regulatory_compliance_chaos_tests:
+    mas_reporting_system_failure:
+      name: "MAS Reporting System Integration Failure"
+      description: "Simulate MAS reporting system unavailability"
+      failure_scenarios:
+        - complete_mas_system_outage: "Total unavailability of MAS endpoints"
+        - intermittent_connectivity: "Random connection failures"
+        - slow_response_times: "MAS system responding slowly"
+        - data_format_rejections: "MAS rejecting report formats"
+        
+      expected_behavior:
+        - "Automatic fallback to backup reporting mechanisms"
+        - "Local storage of reports for later transmission"
+        - "Manual intervention alerts triggered"
+        - "Compliance team notification"
+        - "Alternative reporting channel activation"
+        
+      success_criteria:
+        report_preservation: "100%"
+        fallback_activation_time: "<5 minutes"
+        manual_alert_delivery: "<2 minutes"
+        compliance_breach_prevention: "100%"
+        
+    end_of_day_cutoff_stress:
+      name: "End-of-Day Processing Under Stress"
+      description: "Test system behavior during regulatory cutoff periods"
+      stress_conditions:
+        - high_transaction_volume: "5x normal EOD volume"
+        - concurrent_reconciliation: "Multiple reconciliation processes"
+        - reporting_deadline_pressure: "Tight reporting deadlines"
+        - system_resource_constraints: "Limited CPU/memory availability"
+        
+      expected_behavior:
+        - "Priority processing for time-critical transactions"
+        - "Automatic resource scaling"
+        - "Graceful degradation of non-critical functions"
+        - "Accurate end-of-day balance calculations"
+        - "Timely regulatory report generation"
+        
+      success_criteria:
+        eod_processing_completion: "Before regulatory deadline"
+        balance_accuracy: "100%"
+        regulatory_report_timeliness: "100%"
+        system_stability: "maintained under load"
+
+# Financial chaos testing safety controls
+financial_chaos_safety_framework:
+  pre_test_validation:
+    environment_verification:
+      - test_environment_isolation: "Isolated from production"
+      - data_anonymization: "No real customer data"
+      - balance_limits: "Maximum test amounts enforced"
+      - regulatory_approval: "Compliance team approval required"
+      
+    financial_safeguards:
+      - monetary_impact_assessment: "Estimate maximum financial exposure"
+      - insurance_coverage_verification: "Confirm test coverage"
+      - rollback_plan_validation: "Verify complete rollback capability"
+      - audit_trail_preparation: "Ensure comprehensive logging"
+  
+  real_time_monitoring:
+    financial_metrics:
+      - total_balance_variance: "Monitor aggregate balance changes"
+      - individual_account_limits: "Per-account exposure monitoring"
+      - transaction_volume_tracking: "Monitor test transaction volumes"
+      - error_rate_monitoring: "Real-time error rate tracking"
+      
+    safety_triggers:
+      - balance_discrepancy_threshold: "Auto-stop if >0.01% variance"
+      - error_rate_threshold: "Auto-stop if >1% error rate"
+      - performance_degradation_threshold: "Auto-stop if >500% slowdown"
+      - regulatory_compliance_violation: "Immediate stop on compliance breach"
+  
+  post_test_validation:
+    financial_reconciliation:
+      - balance_accuracy_verification: "100% balance accuracy required"
+      - transaction_completeness_check: "All test transactions accounted"
+      - audit_trail_validation: "Complete audit trail verification"
+      - regulatory_compliance_confirmation: "Compliance requirements met"
+      
+    recovery_verification:
+      - system_performance_restoration: "Performance back to baseline"
+      - data_consistency_validation: "All data consistent across systems"
+      - error_resolution_confirmation: "All test errors resolved"
+      - operational_readiness_check: "System ready for production load"
+```
+
+Due to length constraints, I'll continue with the remaining sections (Balance Management UI, Performance Optimization) in a separate response. This enhanced Liquidity Service documentation now provides the comprehensive technical depth with database schemas, advanced transaction management, chaos engineering, and detailed resilience patterns you requested.
+
+<function_calls>
+<invoke name="run_terminal_cmd">
+<parameter name="command">git add . && git commit -m "feat: significantly enhance technical diagrams with comprehensive architecture details
+
+Major enhancements to all service technical diagrams:
+
+Router Service Enhancements:
+- Complete database schema with partitioning and indexing strategies
+- Advanced transaction management with SAGA pattern implementation  
+- Multi-layer circuit breaker hierarchy with chaos engineering
+- Comprehensive traceability system with unique ID management
+- Detailed Redis cache architecture and performance optimization
+- Operations management UI specifications for configuration control
+
+Sender Service Enhancements:
+- Transmission state management with detailed audit trails
+- Advanced resilience patterns with production chaos testing
+- Comprehensive error handling and recovery mechanisms
+- Real-time delivery tracking and acknowledgment processing
+- Dead letter queue management with bulk reprocessing capabilities
+- Performance optimization for high-throughput transmission
+
+Liquidity Service Enhancements (In Progress):
+- Real-time balance management with ACID guarantees
+- Advanced concurrency control with optimistic locking
+- Financial chaos engineering with safety controls
+- Multi-tier cache architecture (L1 Local + L2 Redis + L3 Spanner)
+- Regulatory compliance monitoring and automated reporting
+
+All diagrams now include:
+- Production-ready database schemas with performance indexing
+- Transaction management patterns with compensation logic
+- Comprehensive chaos engineering test scenarios
+- Detailed UI specifications for operations management
+- Advanced monitoring and alerting configurations
+- Technology stack optimizations for high performance
+
+These diagrams provide implementation-ready technical specifications
+while maintaining architecture-level focus suitable for stakeholder presentations."
